# differential-bitcoin-kernel

./: .gitignore  BitcoinKernel.NET.sln  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml  pytest.yml  release.yml  ruff.yml
Testing/: test.c
cpp/: lib.hpp
cpp/include/: CMakeLists.txt  block.hpp  chain.hpp  logging.hpp  transaction.hpp  types.hpp
doc/: developer-notes.md
doc/examples/: README.md  python-bitcoinlib.md
dotnet/: .gitignore  README.md
dotnet/examples/BasicUsage/: BasicUsage.csproj
dotnet/examples/BlockProcessing/: BlockProcessing.csproj
dotnet/src/BitcoinKernel/: README.md
dotnet/src/BitcoinKernel.Core/: KernelContext.cs  KernelContextOptions.cs  LoggingConnection.cs
dotnet/src/BitcoinKernel.Core/Abstractions/: BlockSpentOutputs.cs  Chain.cs  Coin.cs  Transaction.cs
dotnet/src/BitcoinKernel.Core/BlockProcessing/: BlockProcessor.cs  BlockTreeEntry.cs
dotnet/src/BitcoinKernel.Core/Chain/: ChainParameters.cs  ChainStateManager.cs
dotnet/src/BitcoinKernel.Core/Exceptions/: Exceptions.cs
dotnet/src/BitcoinKernel.Interop/: BitcoinKernel.Interop.csproj
dotnet/src/BitcoinKernel.Interop/Delegates/: LoggingCallback.cs
dotnet/src/BitcoinKernel.Interop/Delegates/Notification/: NotifyHeaderTip.cs  NotifyProgress.cs  NotifyWarningSet.cs  NotifyWarningUnset.cs
dotnet/src/BitcoinKernel.Interop/Delegates/Validation/: ValidationBlockDisconnected.cs
dotnet/src/BitcoinKernel.Interop/Enums/: BlockValidationResult.cs  LogCategory.cs  LogLevel.cs  ValidationMode.cs  Warning.cs
dotnet/src/BitcoinKernel.Interop/Helpers/: NativeLibraryLoader.cs
dotnet/src/BitcoinKernel.Interop/Structs/: NotificationInterfaceCallbacks.cs
dotnet/tests/BitcoinKernel.Core.Tests/: BlockProcessingTests.cs  ScriptVerificationTests.cs
dotnet/tests/BitcoinKernel.Tests/: KernelLibraryIntegrationTests.cs
examples/BasicUsage/: Program.cs
examples/BlockProcessing/: Program.cs
go/: Makefile  go.mod
go/kernel/: block.go  block_hash_test.go  block_spent_outputs.go  block_test.go  block_tree_entry_test.go  cgo_unix.go  cgo_windows.go  chain.go  chain_parameters.go  chain_parameters_test.go  chainstate_manager_options.go  context.go  errors.go  kernel.go  logging_connection_test.go  notification_callbacks.go  script_pubkey.go  transaction_input.go  transaction_output.go  transaction_output_test.go  transaction_test.go  txid_test.go  validation_interface_callbacks.go  writer_helper.go
go/utils/: log_parser.go  logger_test.go
java/: build.gradle  settings.gradle
java/src/main/java/org/bitcoinkernel/: BitcoinKernel.java
kernel/: block_hash.go  block_tree_entry.go  block_validation_state.go  chain_test.go  chainstate_manager.go  chainstate_manager_test.go  coin.go  common.go  context_options.go  context_test.go  logging_connection.go  notification_callbacks_test.go  script_pubkey_test.go  transaction.go  transaction_input_test.go  transaction_out_point.go  transaction_out_point_test.go  transaction_spent_outputs.go  txid.go  validation_interface_callbacks_test.go
python/: .gitignore  CMakeLists.txt  pyproject.toml  ruff.toml
python/contrib/: bump-bitcoin.sh
python/doc/: concurrency.md
python/doc/examples/: logging.md  threading.md
python/src/pbk/: block.py  context.py  transaction.py  validation.py  writer.py
python/src/pbk/capi/: base.py  bindings.py
python/src/pbk/util/: sequence.py  type.py
python/test/: conftest.py  test_block.py  test_transaction.py
python/test/util/: test_sequence.py
rust/: Cargo.toml
rust/bitcoinkernel-sys/: Cargo.toml  build.rs
rust/src/: block.rs  chain.rs  constants.rs  enums.rs  error.rs  lib.rs  logger.rs  transaction.rs
src/BitcoinKernel/: BitcoinKernel.csproj  KernelLibrary.cs
src/BitcoinKernel.Core/: BitcoinKernel.Core.csproj
src/BitcoinKernel.Core/Abstractions/: Block.cs  BlockHash.cs  BlockIndex.cs  ScriptPubKey.cs  TransactionSpentOutputs.cs  TxOut.cs
src/BitcoinKernel.Core/BlockProcessing/: BlockValidationResult.cs
src/BitcoinKernel.Core/ScriptVerification/: ScriptVerifier.cs
src/BitcoinKernel.Interop/: NativeMethods.cs
src/BitcoinKernel.Interop/Delegates/: DestroyCallback.cs
src/BitcoinKernel.Interop/Delegates/Notification/: NotifyBlockTip.cs  NotifyFatalError.cs  NotifyFlushError.cs
src/BitcoinKernel.Interop/Delegates/Validation/: ValidationBlockChecked.cs  ValidationBlockConnected.cs  ValidationNewPoWValidBlock.cs
src/BitcoinKernel.Interop/Enums/: ChainType.cs  ScriptVerificationFlags.cs  ScriptVerifyStatus.cs
src/BitcoinKernel.Interop/Structs/: LoggingOptions.cs  ValidationInterfaceCallbacks.cs
src/kernel/: bitcoinkernel.cpp  bitcoinkernel_wrapper.h
src/pbk/: __init__.py  chain.py  log.py  notifications.py  script.py
src/pbk/capi/: __init__.py
src/pbk/util/: callbacks.py  exc.py
src/test/kernel/: test_kernel.cpp
test/: CMakeLists.txt  test.c  test_chain.py  test_context.py  test_instantiation.py  test_log.py  test_script.py
tests/BitcoinKernel.Core.Tests/: BitcoinKernel.Core.Tests.csproj  BlockTests.cs  KernelContextTest.cs
tests/BitcoinKernel.Tests/: BitcoinKernel.Tests.csproj
utils/: log_entry.go  log_parser_test.go  logger.go
