[package]
name = "bitcoinkernel"
version = "0.0.1"
edition = "2021"
rust-version =  "1.71.0"

[dependencies]
bitcoinkernel-sys = { path = "bitcoinkernel-sys", version = "0.0.1" }

[dev-dependencies]
hex = "0.4"
env_logger = "0.11"
log = "0.4"
tempdir = "0.3"

[workspace]
members = [
    "bitcoinkernel-sys"
]